# resola

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci_pr.yml  deploy.yml  ec2_workflow.yml  ecs_workflow.yml  workflow.yml  workflow_pr.yml
deployments/: Dockerfile  docker-compose.yml  entrypoint.sh
deployments/.aws/: task-definition.json
diagrams/system/: README.md
infra/.aws/: task-definition.json
seeds/: seed.json
src/: conftest.py  manage.py
src/file_management/: apps.py
src/file_management/admin/: __init__.py  file.py
src/file_management/migrations/: 0001_initial.py
src/file_management/model_managers/: file.py
src/file_management/models/: file.py
src/file_management/permissions/: file_permisisons.py  file_permissions.py
src/file_management/restful/filters/: file_filter.py
src/file_management/restful/v1/: file.py
src/file_management/signals/: __init__.py  file.py
src/file_management/urls/: restful_v1.py
src/main/: settings.py  settings_unittest.py  urls.py
src/shared/constants/: enum.py
src/shared/django_admins/: base_admin.py
src/shared/models/: base_model.py  fields.py  file_model_mixin.py  state_mixin.py
src/shared/restful/: permissions.py  serializers.py
src/shared/storages/: aws_s3.py  storage_provider.py
src/shared/utilities/: datetime.py  number.py  text.py
src/tenant/admin/: __init__.py  resource.py  tenant.py
src/tenant/migrations/: 0001_initial.py
src/tenant/models/: __init__.py  resource.py  tenant.py
src/user/admin/: user.py
src/user/migrations/: 0001_initial.py  0002_tenantuser_user_tenants.py
src/user/models/: user.py
(+20 files in other folders)
